--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                  <br>
               <button>Hire Me</button>
         </div>
-        <!-- <div class="hero-image-container">
-            <img class="hero-img" src="code.svg" alt="coder svg">
-        </div> -->
+        <div class="hero-image-container">
+            <img class="hero-img" src="background.png" alt="background">
+        </div>
     
     </div>
 
