--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
    </head>
 <body>
-   
-        <div class="navbar" >
-            <div id="overlay">
-                <a href="#">Link1</a>
-                <a href="#">Link2</a>
-                <a href="#">Link3</a>
-                <a href="#">Link4</a>
-              </div>
-              <div class="nav">
-                <div class="logo">LOGO</div>
-                <div id="hamburger">
-                  <div></div>
-                </div>
-              </div>
-            </div>
+  <div class="navbar-area">
+    <div class="container">
+      <nav class="site-navbar">
+        <a href="#home" class="site-logo">Glow Make-up</a>
+
+        <ul>
+          <li><a href="#about">about</a></li>
+          <li><a href="#courses">courses</a></li>
+          <li><a href="#tutorial">turorial</a></li>
+          <li><a href="#faq">faq</a></li>
+          <li><a href="#contact">contact</a></li>
+        </ul>
+
+        <button class="nav-toggler">
+          <span></span>
+        </button>
+      </nav>
+    </div>
+  </div>   
 
 <div class="hero">
 
@@ -35,7 +39,7 @@
                 <h2 class="hero-text-2">Morzook Biobaku.</h2> 
                 <h3 class="hero-text-3">I build things for the web.</h3>
                 <br>
-                <p class="intro"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p class="hero-paragraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Iusto nemo in repudiandae inventore dolor sunt dolorum repellendus. 
                 Error maiores earum obcaecati debitis tempore quis minima harum
                  delectus alias, pariatur totam!
@@ -53,10 +57,11 @@
         </div>
     
     </div>
-
 </div> 
 <hr>
 
+
+<!-- 
 <div class="about-me"> 
   <div class="about-me-content">
   <div class="about-me-text">
@@ -126,7 +131,7 @@
   <a href="www.facebook.com/morzook"> <img class="footer-icons" src="linkedin.png"></a>
  
 </div>
-</div>
+</div> -->
 
  
 
