--- a/index.html
+++ b/index.html
@@ -100,16 +100,19 @@
   </ul>
 </div>
 </div>
+<div class="about-me-image">
   <div class="about-me-image-container">
-      <img class="about-me-image" src="20210302_134232-01.jpeg" alt="my picture">
+      <img class="about-image" src="20210302_134232-01.jpeg" alt="my picture">
   </div>
+</div>
 </div>
 
 </div>
   <!-- ABOUT ME SECTION ENDS -->
 
-<!-- <hr>
-<div class="contact-me">      
+  <!-- CONTACT SECTION STARTS -->
+<hr>
+<!-- <div class="contact-me">      
   <div class="form-container">
         <h2>Contact Me</h2>
       <div class="form-feild">
@@ -119,12 +122,15 @@
             <input type="message" id="message" class="input" placeholder="Your Message">
         </div>
         <div class="button-div">
-            <button type="submit">Send</button>
+            <button class="form-button" type="submit">Send</button>
         </div>
     </div>
 </div>
-</div>
+</div> -->
+  <!-- CONTACT SECTION ENDS -->
 
+
+  <!-- FOOTER SECTION STARTS -->
 <div class="footer">
 <p>Reach me via social media</p>
 <div class="social-icons">
@@ -134,10 +140,9 @@
   <a href="www.facebook.com/morzook"> <img class="footer-icons" src="linkedin.png"></a>
  
 </div>
-</div> -->
+</div> 
 
- 
-
+  <!-- FOOTER SECTION ENDS -->
 
   <script src="portfolio.js"></script>
 </body>
