--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="about-me"> 
   <div class="about-me-content">
   <div class="about-me-text">
-    <div class="about-me-heading">
+    <div class="dashed-heading">
       <div class="separator">
           <h2>About Me</h2>
           <div class="line"></div>
@@ -108,7 +108,101 @@
 </div>
 
 </div>
+<hr>
   <!-- ABOUT ME SECTION ENDS -->
+
+
+  <!-- PROJECT SECTION STARTS -->
+  <div class="projects">
+    <div class="dashed-heading">
+      <div class="separator">
+          <h2>some things i have built</h2>
+          <div class="line"></div>
+        </div>
+      </div>
+      <div class="projects-container">
+    <div class="project-1">
+      <div class="project-content-1">
+        <div class="project-topic">Knit wear store</div>
+        <div class="project-description">
+          <p class="project-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Aperiam, optio totam vitae assumenda distinctio eveniet, 
+             voluptatem similique quaerat sint facilis quas officia, 
+             itaque praesentium nemo?
+          </p>
+        </div>
+        <div class="project-tech">
+          VsCode  JavaScript CSS HTML
+        </div>
+        <div class="project-links">
+          <img class="github" src="github-2.png" alt="">
+          <img class="external-link" src="foreign.png" alt="">
+        </div>
+      </div>
+      <div class="project-content-2">
+        <img class="project-content-2-image" src="knit-snip.JPG" alt="">
+
+      </div>
+    </div>
+    <div id="project-2" class="project-2">
+      <div id="project-content-1" class="project-content-1">
+        <div class="project-topic"> nutrition website</div>
+        <div class="project-description">
+          <p class="project-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Aperiam, optio totam vitae assumenda distinctio eveniet, 
+             voluptatem similique quaerat sint facilis quas officia, 
+             itaque praesentium nemo?
+          </p>
+        </div>
+        <div class="project-tech">
+          VsCode  JavaScript CSS HTML
+        </div>
+        <div id="project-links-2" class="project-links">
+          <img class="github" src="github-2.png" alt="">
+          <img class="external-link" src="foreign.png" alt="">
+        </div>
+      </div>
+      <div class="project-content-2">
+        <img id="project-img-2" class="project-content-2-image" src="nutrition-snip.PNG" alt="">
+
+      </div>
+    </div>
+    <div id="project-3" class="project-3">
+      <div class="project-content-1">
+        <div class="project-topic"> make-up school</div>
+        <div class="project-description">
+          <p class="project-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Aperiam, optio totam vitae assumenda distinctio eveniet, 
+             voluptatem similique quaerat sint facilis quas officia, 
+             itaque praesentium nemo?
+          </p>
+        </div>
+        <div class="project-tech">
+          VsCode  JavaScript CSS HTML
+        </div>
+        <div class="project-links">
+          <img class="github" src="github-2.png" alt="">
+          <img class="external-link" src="foreign.png" alt="">
+        </div>
+      </div>
+      <div class="project-content-2">
+        <img id="project-img-3" class="project-content-2-image" src="make-up-snip.PNG" alt="">
+
+      </div>
+    </div>
+  </div>
+
+
+  </div>
+
+
+
+
+  <!-- PROJECT SECTION ENDS -->
+
 
   <!-- CONTACT SECTION STARTS -->
 <hr>
