--- a/index.html
+++ b/index.html
@@ -195,13 +195,123 @@
     </div>
   </div>
 
-
   </div>
-
-
-
-
   <!-- PROJECT SECTION ENDS -->
+
+   <!-- OTHER PROJECT SECTION STARTS -->
+  <hr>
+  <div class="other-projects">
+  <h2>other projects</h2>
+  <div class="other-projects-container">
+    <div class="other-projects-content">
+      <div class="other-projects-content-1">
+
+      </div>
+      <div class="other-projects-content-2">
+         <div id="other-projects-topic" class="project-topic"> make-up school</div>
+        <div id="other-projects-description" class="project-description">
+          <p id="other-projects-paragraph" class="project-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Aperiam, optio totam vitae assumenda distinctio eveniet, 
+             voluptatem similique quaerat sint facilis quas officia, 
+             itaque praesentium nemo?
+          </p>
+        </div>
+        <div id="other-projects-tech" class="project-tech">
+          VsCode  JavaScript CSS HTML
+        </div>
+        <div id="other-projects-links" class="project-links">
+          <img class="github" src="github-2.png" alt="">
+          <img class="external-link" src="foreign.png" alt="">
+        </div>
+
+      </div>
+    </div>
+    <div class="other-projects-content">
+      <div class="other-projects-content-1">
+
+      </div>
+      <div class="other-projects-content-2">
+        <div id="other-projects-topic" class="project-topic"> make-up school</div>
+        <div id="other-projects-description" class="project-description">
+          <p id="other-projects-paragraph" class="project-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Aperiam, optio totam vitae assumenda distinctio eveniet, 
+             voluptatem similique quaerat sint facilis quas officia, 
+             itaque praesentium nemo?
+          </p>
+        </div>
+        <div id="other-projects-tech" class="project-tech">
+          VsCode  JavaScript CSS HTML
+        </div>
+        <div id="other-projects-links" class="project-links">
+          <img class="github" src="github-2.png" alt="">
+          <img class="external-link" src="foreign.png" alt="">
+        </div>
+
+      </div>
+    </div>
+    <div class="other-projects-content">
+      <div class="other-projects-content-1">
+
+      </div>
+      <div class="other-projects-content-2">
+        <div id="other-projects-topic" class="project-topic"> make-up school</div>
+        <div id="other-projects-description" class="project-description">
+          <p id="other-projects-paragraph" class="project-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Aperiam, optio totam vitae assumenda distinctio eveniet, 
+             voluptatem similique quaerat sint facilis quas officia, 
+             itaque praesentium nemo?
+          </p>
+        </div>
+        <div id="other-projects-tech" class="project-tech">
+          VsCode  JavaScript CSS HTML
+        </div>
+        <div id="other-projects-links" class="project-links">
+          <img class="github" src="github-2.png" alt="">
+          <img class="external-link" src="foreign.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="other-projects-content">
+      <div class="other-projects-content-1">
+
+      </div>
+      <div class="other-projects-content-2">
+        <div id="other-projects-topic" class="project-topic"> make-up school</div>
+        <div id="other-projects-description" class="project-description">
+          <p id="other-projects-paragraph" class="project-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+             Aperiam, optio totam vitae assumenda distinctio eveniet, 
+             voluptatem similique quaerat sint facilis quas officia, 
+             itaque praesentium nemo?
+          </p>
+        </div>
+        <div id="other-projects-tech" class="project-tech">
+          VsCode  JavaScript CSS HTML
+        </div>
+        <div id="other-projects-links" class="project-links">
+          <img class="github" src="github-2.png" alt="">
+          <img class="external-link" src="foreign.png" alt="">
+        </div>
+
+      </div>
+    </div>
+  </div>
+  
+  </div>
+ 
+
+
+
+
+
+
+
+
+   <!-- OTHER PROJECT SECTION ENDS -->
+
 
 
   <!-- CONTACT SECTION STARTS -->
