other project images

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <div class="other-projects-container">
     <div class="other-projects-content">
       <div class="other-projects-content-1">
-
+        <img class="other-projects-image" src="coffee-shop-snip.PNG" alt="">
       </div>
       <div class="other-projects-content-2">
          <div id="other-projects-topic" class="project-topic"> make-up school</div>
@@ -229,7 +229,7 @@
     </div>
     <div class="other-projects-content">
       <div class="other-projects-content-1">
-
+        <img class="other-projects-image" src="jollof-snip.PNG" alt="">
       </div>
       <div class="other-projects-content-2">
         <div id="other-projects-topic" class="project-topic"> make-up school</div>
@@ -253,7 +253,7 @@
     </div>
     <div class="other-projects-content">
       <div class="other-projects-content-1">
-
+        <img class="other-projects-image" src="" alt="">
       </div>
       <div class="other-projects-content-2">
         <div id="other-projects-topic" class="project-topic"> make-up school</div>
@@ -276,7 +276,7 @@
     </div>
     <div class="other-projects-content">
       <div class="other-projects-content-1">
-
+        <img class="other-projects-image" src="" alt="">
       </div>
       <div class="other-projects-content-2">
         <div id="other-projects-topic" class="project-topic"> make-up school</div>
@@ -301,39 +301,9 @@
   </div>
   
   </div>
- 
-
-
-
-
-
-
-
-
    <!-- OTHER PROJECT SECTION ENDS -->
 
-
-
-  <!-- CONTACT SECTION STARTS -->
 <hr>
-<!-- <div class="contact-me">      
-  <div class="form-container">
-        <h2>Contact Me</h2>
-      <div class="form-feild">
-        <div class="input-feild">
-            <input type="name" class="input" placeholder="Your Name">
-            <input type="email" class="input" placeholder="Your Email">
-            <input type="message" id="message" class="input" placeholder="Your Message">
-        </div>
-        <div class="button-div">
-            <button class="form-button" type="submit">Send</button>
-        </div>
-    </div>
-</div>
-</div> -->
-  <!-- CONTACT SECTION ENDS -->
-
-
   <!-- FOOTER SECTION STARTS -->
 <div class="footer">
 <p>Reach me via social media</p>
