--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
                 <h2 class="hero-text-2">Morzook Biobaku.</h2> 
                 <h3 class="hero-text-3">I build things for the web.</h3>
                 <br>
-                <p class="hero-paragraph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Iusto nemo in repudiandae inventore dolor sunt dolorum repellendus. 
-                Error maiores earum obcaecati debitis tempore quis minima harum
-                 delectus alias, pariatur totam!
+                <p class="hero-paragraph"> I am a global web developer and digital marketer. 
+                  Currently based in Lagos, Nigeria and actively seeking remote jobs. 
+                  Willing to relocate for the right opportunities.
                  </p>
                  <div class="social-buttons">
                   <a href="www.facebook.com/morzook"> <img class="icons" src="facebook.png"></a>
@@ -53,7 +52,7 @@
                   <a href="www.facebook.com/morzook"> <img class="icons" src="github.png"></a>
                   <a href="www.facebook.com/morzook"> <img class="icons" src="linkedin.png"></a>
                  </div>
-              <button>Hire Me</button>
+              <button> get in touch</button>
         </div>
         <div class="hero-image-container">
             <img class="hero-image" src="background.png" alt="background">
@@ -129,7 +128,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
              Aperiam, optio totam vitae assumenda distinctio eveniet, 
              voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?
+             itaque praesentium nemo?  vitae assumenda distinctio evenie
           </p>
         </div>
         <div class="project-tech">
