--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                   Willing to relocate for the right opportunities.
                  </p>
                  <div class="social-buttons">
-                  <a href="www.github.com/morzook"> <img class="icons" src="github.png"></a>
+                  <a href="https://www.github.com/morzook"> <img class="icons" src="github.png"></a>
                   <a href="https://www.linkedin.com/in/biobaku-morzook-b7476370"> <img class="icons" src="linkedin.png"></a>
-                  <a href="www.instagram.com/morzook"> <img class="icons" src="instagram.png"></a>
-                  <a href="www.facebook.com/morzook"> <img class="icons" src="facebook.png"></a>
+                  <a href="https://www.instagram.com/morzook"> <img class="icons" src="instagram.png"></a>
+                  <a href="https://www.facebook.com/morzook"> <img class="icons" src="facebook.png"></a>
                  </div>
               <button> get in touch</button>
         </div>
