--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
             <H1 class="hero-text-1">Hi, my name is</h1> 
                 <h2 class="hero-text-2">Morzook Biobaku.</h2> 
                 <h3 class="hero-text-3">I build things for the web.</h3>
-                <br>
-                <p class="hero-paragraph"> I am a global web developer and digital marketer. 
-                  Currently based in Lagos, Nigeria and actively seeking remote jobs. 
-                  Willing to relocate for the right opportunities.
-                 </p>
+                <div class="intro">
+                  <p class="hero-paragraph"> I am a global web developer and digital marketer. 
+                    Currently based in Lagos, Nigeria and actively seeking remote jobs. 
+                    Willing to relocate for the right opportunities.
+                   </p>
+                </div>
                  <div class="social-buttons">
                   <a href="https://www.github.com/morzook"> <img class="icons" src="github.png"></a>
                   <a href="https://www.linkedin.com/in/biobaku-morzook-b7476370"> <img class="icons" src="linkedin.png"></a>
@@ -64,258 +65,6 @@
   <!-- HERO SECTION ENDS -->
 
 
-
-  <!-- ABOUT ME SECTION BEGINS -->
-<div class="about-me"> 
-  <div class="about-me-content">
-  <div class="about-me-text">
-    <div class="dashed-heading">
-      <div class="separator">
-          <h2>About Me</h2>
-          <div class="line"></div>
-        </div>
-      </div>
-  <P>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Ratione, quas natus nisi eum debitis laboriosam ullam eaque quae 
-      architecto molestiae minus iure magnam excepturi, cum suscipit 
-      illo? Quisquam, nam atque.  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Ratione, quas natus nisi eum debitis laboriosam ullam eaque quae 
-      architecto molestiae minus iure magnam excepturi, cum suscipit 
-      illo? Quisquam, nam atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-  </P>
-  <br>
-  <div class="proficiency">
-  I am currently proficient with:
-  <ul class="proficiency-ul" >
-      <div>
-      <li class="proficiency-li" >HTML/CSS</li>
-      <li class="proficiency-li" >Wordpress/Elementor</li>
-  </div>
-  <div>
-      <li class="proficiency-li" >Bootstrap</li>
-      <li class="proficiency-li" >Javascript</li>
-  </div>
-  </ul>
-</div>
-</div>
-<div class="about-me-image">
-  <div class="about-me-image-container">
-      <img class="about-image" src="20210302_134232-01.jpeg" alt="my picture">
-  </div>
-</div>
-</div>
-
-</div>
-<hr>
-  <!-- ABOUT ME SECTION ENDS -->
-
-
-  <!-- PROJECT SECTION STARTS -->
-  <div class="projects">
-    <div class="dashed-heading">
-      <div class="separator">
-          <h2>some things i have built</h2>
-          <div class="line"></div>
-        </div>
-      </div>
-      <div class="projects-container">
-    <div class="project-1">
-      <div class="project-content-1">
-        <div class="project-topic">Knit wear store</div>
-        <div class="project-description">
-          <p class="project-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Aperiam, optio totam vitae assumenda distinctio eveniet, 
-             voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?  vitae assumenda distinctio evenie
-          </p>
-        </div>
-        <div class="project-tech">
-          VsCode  JavaScript CSS HTML
-        </div>
-        <div class="project-links">
-          <img class="github" src="github-2.png" alt="">
-          <img class="external-link" src="foreign.png" alt="">
-        </div>
-      </div>
-      <div class="project-content-2">
-        <img class="project-content-2-image" src="knit-snip.JPG" alt="">
-
-      </div>
-    </div>
-    <div id="project-2" class="project-2">
-      <div id="project-content-1" class="project-content-1">
-        <div class="project-topic"> nutrition website</div>
-        <div class="project-description">
-          <p class="project-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Aperiam, optio totam vitae assumenda distinctio eveniet, 
-             voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?
-          </p>
-        </div>
-        <div class="project-tech">
-          VsCode  JavaScript CSS HTML
-        </div>
-        <div id="project-links-2" class="project-links">
-          <img class="github" src="github-2.png" alt="">
-          <img class="external-link" src="foreign.png" alt="">
-        </div>
-      </div>
-      <div class="project-content-2">
-        <img id="project-img-2" class="project-content-2-image" src="nutrition-snip.PNG" alt="">
-
-      </div>
-    </div>
-    <div id="project-3" class="project-3">
-      <div class="project-content-1">
-        <div class="project-topic"> make-up school</div>
-        <div class="project-description">
-          <p class="project-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Aperiam, optio totam vitae assumenda distinctio eveniet, 
-             voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?
-          </p>
-        </div>
-        <div class="project-tech">
-          VsCode  JavaScript CSS HTML
-        </div>
-        <div class="project-links">
-          <img class="github" src="github-2.png" alt="">
-          <img class="external-link" src="foreign.png" alt="">
-        </div>
-      </div>
-      <div class="project-content-2">
-        <img id="project-img-3" class="project-content-2-image" src="make-up-snip.PNG" alt="">
-
-      </div>
-    </div>
-  </div>
-
-  </div>
-  <!-- PROJECT SECTION ENDS -->
-
-   <!-- OTHER PROJECT SECTION STARTS -->
-  <hr>
-  <div class="other-projects">
-  <h2>other projects</h2>
-  <div class="other-projects-container">
-    <div class="other-projects-content">
-      <div class="other-projects-content-1">
-        <img class="other-projects-image" src="coffee-shop-snip.PNG" alt="">
-      </div>
-      <div class="other-projects-content-2">
-         <div id="other-projects-topic" class="project-topic"> make-up school</div>
-        <div id="other-projects-description" class="project-description">
-          <p id="other-projects-paragraph" class="project-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Aperiam, optio totam vitae assumenda distinctio eveniet, 
-             voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?
-          </p>
-        </div>
-        <div id="other-projects-tech" class="project-tech">
-          VsCode  JavaScript CSS HTML
-        </div>
-        <div id="other-projects-links" class="project-links">
-          <img class="github" src="github-2.png" alt="">
-          <img class="external-link" src="foreign.png" alt="">
-        </div>
-
-      </div>
-    </div>
-    <div class="other-projects-content">
-      <div class="other-projects-content-1">
-        <img class="other-projects-image" src="jollof-snip.PNG" alt="">
-      </div>
-      <div class="other-projects-content-2">
-        <div id="other-projects-topic" class="project-topic"> make-up school</div>
-        <div id="other-projects-description" class="project-description">
-          <p id="other-projects-paragraph" class="project-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Aperiam, optio totam vitae assumenda distinctio eveniet, 
-             voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?
-          </p>
-        </div>
-        <div id="other-projects-tech" class="project-tech">
-          VsCode  JavaScript CSS HTML
-        </div>
-        <div id="other-projects-links" class="project-links">
-          <img class="github" src="github-2.png" alt="">
-          <img class="external-link" src="foreign.png" alt="">
-        </div>
-
-      </div>
-    </div>
-    <div class="other-projects-content">
-      <div class="other-projects-content-1">
-        <img class="other-projects-image" src="" alt="">
-      </div>
-      <div class="other-projects-content-2">
-        <div id="other-projects-topic" class="project-topic"> make-up school</div>
-        <div id="other-projects-description" class="project-description">
-          <p id="other-projects-paragraph" class="project-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Aperiam, optio totam vitae assumenda distinctio eveniet, 
-             voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?
-          </p>
-        </div>
-        <div id="other-projects-tech" class="project-tech">
-          VsCode  JavaScript CSS HTML
-        </div>
-        <div id="other-projects-links" class="project-links">
-          <img class="github" src="github-2.png" alt="">
-          <img class="external-link" src="foreign.png" alt="">
-        </div>
-      </div>
-    </div>
-    <div class="other-projects-content">
-      <div class="other-projects-content-1">
-        <img class="other-projects-image" src="" alt="">
-      </div>
-      <div class="other-projects-content-2">
-        <div id="other-projects-topic" class="project-topic"> make-up school</div>
-        <div id="other-projects-description" class="project-description">
-          <p id="other-projects-paragraph" class="project-paragraph">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Aperiam, optio totam vitae assumenda distinctio eveniet, 
-             voluptatem similique quaerat sint facilis quas officia, 
-             itaque praesentium nemo?
-          </p>
-        </div>
-        <div id="other-projects-tech" class="project-tech">
-          VsCode  JavaScript CSS HTML
-        </div>
-        <div id="other-projects-links" class="project-links">
-          <img class="github" src="github-2.png" alt="">
-          <img class="external-link" src="foreign.png" alt="">
-        </div>
-
-      </div>
-    </div>
-  </div>
-  
-  </div>
-   <!-- OTHER PROJECT SECTION ENDS -->
-
-<hr>
-  <!-- FOOTER SECTION STARTS -->
-<div class="footer">
-<p>Reach me via social media</p>
-<div class="social-icons">
-  <a href="www.facebook.com/morzook"> <img class="footer-icons" src="facebook.png"></a>
-  <a href="www.face.com/morzook"> <img class="footer-icons" src="instagram.png"></a>
-  <a href="www.facebook.com/morzook"> <img class="footer-icons" src="github.png"></a>
-  <a href="www.facebook.com/morzook"> <img class="footer-icons" src="linkedin.png"></a>
- 
-</div>
-</div> 
-
-  <!-- FOOTER SECTION ENDS -->
 
   <script src="portfolio.js"></script>
 </body>
