--- a/index.html
+++ b/index.html
@@ -65,6 +65,52 @@
   <!-- HERO SECTION ENDS -->
 
 
+  <!-- ABOUT ME SECTION BEGINS -->
+<div class="about-me"> 
+  <div class="about-me-content">
+  <div class="about-me-text">
+    <div class="dashed-heading">
+      <div class="separator">
+          <h2>About Me</h2>
+          <div class="line"></div>
+        </div>
+      </div>
+  <P>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Ratione, quas natus nisi eum debitis laboriosam ullam eaque quae 
+      architecto molestiae minus iure magnam excepturi, cum suscipit 
+      illo? Quisquam, nam atque.  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Ratione, quas natus nisi eum debitis laboriosam ullam eaque quae 
+      architecto molestiae minus iure magnam excepturi, cum suscipit 
+      illo? Quisquam, nam atque. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+  </P>
+  <br>
+  <div class="proficiency">
+  I am currently proficient with:
+  <ul class="proficiency-ul" >
+      <div>
+      <li class="proficiency-li" >HTML/CSS</li>
+      <li class="proficiency-li" >Wordpress/Elementor</li>
+  </div>
+  <div>
+      <li class="proficiency-li" >Bootstrap</li>
+      <li class="proficiency-li" >Javascript</li>
+  </div>
+  </ul>
+</div>
+</div>
+<div class="about-me-image">
+  <div class="about-me-image-container">
+      <img class="about-image" src="20210302_134232-01.jpeg" alt="my picture">
+  </div>
+</div>
+</div>
+
+</div>
+<hr>
+  <!-- ABOUT ME SECTION ENDS -->
+
+
 
   <script src="portfolio.js"></script>
 </body>
