--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="navbar-area">
     <div class="container">
       <nav class="site-navbar">
-        <a href="#home" class="site-logo">Glow Make-up</a>
+        <a href="#home" class="site-logo">MORZOOK</a>
 
         <ul>
           <li><a href="#about">about</a></li>
@@ -48,10 +48,10 @@
                    </p>
                 </div>
                  <div class="social-buttons">
-                  <a href="https://www.github.com/morzook"> <img class="icons" src="github.png"></a>
-                  <a href="https://www.linkedin.com/in/biobaku-morzook-b7476370"> <img class="icons" src="linkedin.png"></a>
-                  <a href="https://www.instagram.com/morzook"> <img class="icons" src="instagram.png"></a>
-                  <a href="https://www.facebook.com/morzook"> <img class="icons" src="facebook.png"></a>
+                  <a href="https://www.github.com/morzook" target="_blank"> <img class="icons" src="github.png"></a>
+                  <a href="https://www.linkedin.com/in/biobaku-morzook-b7476370" target="_blank"> <img class="icons" src="linkedin.png"></a>
+                  <a href="https://www.instagram.com/morzook" target="_blank"> <img class="icons" src="instagram.png"></a>
+                  <a href="https://www.facebook.com/morzook" target="_blank"> <img class="icons" src="facebook.png"></a>
                  </div>
               <button> get in touch</button>
         </div>
@@ -314,10 +314,10 @@
  <div class="footer">
  <p>Reach me via social media</p>
  <div class="social-icons">
-   <a href="www.facebook.com/morzook"> <img class="footer-icons" src="facebook.png"></a>
-   <a href="www.face.com/morzook"> <img class="footer-icons" src="instagram.png"></a>
-   <a href="www.facebook.com/morzook"> <img class="footer-icons" src="github.png"></a>
-   <a href="www.facebook.com/morzook"> <img class="footer-icons" src="linkedin.png"></a>
+   <a href="https://www.linkedin.com/in/biobaku-morzook-b7476370" target="_blank"> <img class="footer-icons" src="linkedin.png"></a>
+   <a href="https://www.facebook.com/morzook" target="_blank"> <img class="footer-icons" src="facebook.png"></a>
+   <a href="https://www.instagram.com/morzook" target="_blank"> <img class="footer-icons" src="instagram.png"></a>
+   <a href="https://www.github.com/morzook" target="_blank"> <img class="footer-icons" src="github.png"></a>
   
  </div>
  </div> 
