--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <a href="#home" class="site-logo">MORZOOK</a>
 
         <ul>
-          <li><a href="#about">about</a></li>
-          <li><a href="#courses">courses</a></li>
-          <li><a href="#tutorial">turorial</a></li>
-          <li><a href="#faq">faq</a></li>
-          <li><a href="#contact">contact</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about-me">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#other-projects">Other Projects</a></li>
         </ul>
 
         <button class="nav-toggler">
@@ -35,7 +34,7 @@
 
 
   <!-- HERO SECTION BEGINS -->
-<div class="hero">
+<div id='hero' class="hero">
     <div class="meet-me">
         <div class="text-area">
             <H1 class="hero-text-1">Hi, my name is</h1> 
@@ -66,7 +65,7 @@
 
 
   <!-- ABOUT ME SECTION BEGINS -->
-<div class="about-me"> 
+<div id='about-me' class="about-me"> 
   <div class="about-me-content">
   <div class="about-me-text">
     <div class="dashed-heading">
@@ -112,7 +111,7 @@
 
 
    <!-- PROJECT SECTION STARTS -->
-   <div class="projects">
+   <div id="projects" class="projects">
     <div class="dashed-heading">
       <div class="separator">
           <h2>some things i have built</h2>
@@ -197,16 +196,10 @@
   </div>
   <!-- PROJECT SECTION ENDS -->
 
-  
-
-  
-
-
- 
 
    <!-- OTHER PROJECT SECTION STARTS -->
    <hr>
-   <div class="other-projects">
+   <div id='other-projects' class="other-projects">
    <h2>other projects</h2>
    <div class="other-projects-container">
      <div class="other-projects-content">
