--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about-me">About</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#other-projects">Other Projects</a></li>
+          <div class="nav-btn">get in touch</div>
         </ul>
 
         <button class="nav-toggler">
